fix(Footer): fixes background being visible on page load

--- a/components/sections/Footer/Footer.module.css
+++ b/components/sections/Footer/Footer.module.css
@@ -1,4 +1,6 @@
 .footer {
+  position: relative;
+
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -8,4 +10,20 @@
   margin-top: 500px;
 
   color: white;
+}
+
+.background {
+  position: absolute;
+  z-index: -1;
+
+  bottom: 0;
+  left: 0;
+
+  width: 100%;
+  height: 200vh;
+
+  background-color: #121212;
+  background-image: url('/images/topography.svg');
+  background-size: contain;
+  background-position: center;
 }
